<resources>
    <string name="app_name">Notes</string>
    <string name="login_input">Enter login</string>
    <string name="password_input">Enter password</string>
    <string name="send_button">Send</string>
    <string name="empty_password">Enter password!</string>
    <string name="empty_login">Enter login!</string>
    <string name="empty_name">Enter name!</string>
    <string name="empty_surname">Enter surname!</string>
    <string name="empty_email">Enter email!</string>
    <string name="invalid_email">Enter valid email!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create new account</string>
    <string name="name_input">Enter name</string>
    <string name="surname_input">Enter surname</string>
    <string name="email_input">Enter e-mail</string>
    <string name="show_pass_checkbox">Show password</string>
    <string name="login_output">Login</string>
    <string name="login_with_ex_account">Login</string>
    <string name="success_register">User successfully registered!</string>
    <string name="title_register">Registration</string>
    <string name="title_login">Log In</string>
    <string name="password_output">Password</string>
    <string name="name_output">Name</string>
    <string name="surname_output">Surname</string>
    <string name="email_output" translatable="false">E-mail</string>
    <string name="short_login">Login is too short</string>
    <string name="long_login">Login is too long</string>
    <string name="login_exists">Login already exists</string>
    <string name="wrong_login_symbols">Wrong login symbols</string>
    <string name="short_password">Password too short</string>
    <string name="wrong_mail">Wrong email</string>
    <string name="mail_exists">Email already exists</string>
    <string name="bad_token">Invalid token</string>
    <string name="expired_token">Token time expired</string>
    <string name="requires_token">Requires token</string>
    <string name="bad_data">Invalid data</string>
    <string name="wrong_request_parameters">Wrong request parameters</string>
    <string name="internal_error">Internal error</string>
    <string name="empty_body">Empty body</string>
    <string name="wrong_function">Wrong function</string>
    <string name="add_note_title">Title:</string>
    <string name="add_note_text">Text:</string>
    <string name="save_chng">Save changes</string>
    <string name="title_activity_note" translatable="false">NoteActivity</string>
    <string name="bad_result">Bad result</string>

</resources>
